--- a/TEST_GAME/spaceshooter.html
+++ b/TEST_GAME/spaceshooter.html
@@ -19,7 +19,8 @@
     
     canvas {
       display: block; /* Loại bỏ khoảng trống dư thừa */
-      width: 1016px; /* Đặt kích thước chiều rộng của canvas */
+      /* width: 1016px;  */
+      /* Đặt kích thước chiều rộng của canvas */
 
     }
   </style>
