--- a/TEST_GAME/spaceshooter.html
+++ b/TEST_GAME/spaceshooter.html
@@ -27,7 +27,22 @@
 </head>
 <body class="background">
   <canvas></canvas>
-  <script src="./app.js"></script>
+  <script type="module" src="./app.js"></script>
   <script src="./main.css"></script>
+  
+
+
+
+
+  <div id="wrapper">
+    <div id="overlay">
+      <div id="message">
+        <h2>Chúc mừng!</h2>
+        <p>Bạn đã vượt qua màn 1. Tiếp tục chơi để đối mặt với màn 2!</p> 
+        <p style="font-size: 40; color: red">Bấm Enter để tiếp tục</p>
+      </div>
+    </div>
+</div>
+  
 </body>
 </html>
