--- a/TEST_GAME/spaceshooter.html
+++ b/TEST_GAME/spaceshooter.html
@@ -39,6 +39,16 @@
       </div>
     </div>
 </div>
+
+<div id="wrapper2">
+  <div id="overlay2">
+    <div id="message2">
+      <h2>Chúc mừng!</h2>
+      <p>Bạn đã hoàn thành game</p> 
+    </div>
+  </div>
+</div>
+
   
 </body>
 </html>
