--- a/TEST_GAME/Menu_Game/index_menu.html
+++ b/TEST_GAME/Menu_Game/index_menu.html
@@ -32,8 +32,8 @@
         <h1>Space-Ship</h1>
         <h3>ABC</h3>
         <ul>
-            <li><a href="http://127.0.0.1:5500/TEST_GAME/spaceshooter.html" id="New-Game">New-Game</a></li>
-            <li><a href="#">Continue</a></li>
+            <li><a href="http://127.0.0.1:5500/TEST_GAME/spaceshooter.html" id="New-Game">Play-Game</a></li>
+          
             <li><a href="#" id="Exit-Game">Exit-Game</a></li>
         </ul>
     </div>
