--- a/TEST_GAME/spaceshooter.html
+++ b/TEST_GAME/spaceshooter.html
@@ -28,6 +28,7 @@
 <body class="background">
 
   
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.browser.min.js"></script>
 
   <canvas></canvas>
   <script type="module" src="./app.js"></script>
