--- a/TEST_GAME/Menu_Game/index_menu.html
+++ b/TEST_GAME/Menu_Game/index_menu.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset='utf-8'>
         <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-        <title>TRUONG VO</title>
+        <title>Natural SpaceNe</title>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
         <link rel='stylesheet' type='text/css' media='screen' href='main_menu.css'>
         <script src='main_menu.css'></script>
